--- a/logres.css
+++ b/logres.css
@@ -46,9 +46,20 @@ li {
   background: transparent;
 }
 
-.form {
+.form-signup {
   width: 400px;
-  height: 450px;
+  height: 500px;
+  background: white;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  padding: 30px 50px;
+  box-shadow: 0px 0px 10px #999999;
+}
+
+.form-login {
+  width: 400px;
+  height: 400px;
   background: white;
   border-radius: 25px;
   display: flex;
@@ -62,6 +73,8 @@ label,
 .form-username,
 label,
 .form-password,
+label,
+.form-role,
 label {
   font-family: "Poppins";
   font-size: 10px;
@@ -131,25 +144,4 @@ img {
   width: 500px;
   height: 600px;
   margin-left: 10px;
-}
-
-.logo{
-  width: 60px;
-  height: 60px;
-  padding: 0px 0px 0px 0px;
-  margin: 10px 0px 0px 30px;
-}
-.div-logo {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-items: center;
-  background: transparent;
-}
-.div-logo, p{
-  font-family: "Poppins";
-  font-size: 25px;
-  font-weight: 700;
-  color: black;
-  margin: 10px 0px 0px 10px;
 }
