--- a/kelas.css
+++ b/kelas.css
@@ -208,7 +208,14 @@ nav ul.slide {
   padding: 10px 0px 10px 0px;
   border-radius: 20px;
   background-color: #e0e0e0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
+.kuis{
+  margin-right: 20px;
+}
+
 .kode-judul {
   font-family: "Poppins";
   font-size: 20px;
